2021-??-?? 0.?.?
  * New command: scene-search
  * release-name: Don't accept release name if any obligatory information is
    unknown.


2021-01-26 0.1.0
  * NBL: Added --ignore-dupes option


2021-01-14 0.0.1
  * Initial release